# mac-logs.py

./: README.md  requirements.txt  setup.cfg  setup.py
mac_logs/: __init__.py
tests/mac-logs/examples/logs/: filenames.py  logs.py  minsize.py
tests/mac-logs/examples/rm/: rm.py
tests/mac-logs/examples/tag/: tag.py  tag.sh
