[metadata]
name = mac-logs
version = 2018.11.19
url = https://github.com/looking-for-a-job/mac-logs.py
classifiers = file: classifiers.txt
description = file: description.txt
long_description = file: pypi.md
long_description_content_type = text/markdown
keywords = logs

[options]
install_requires = 
	find
	mac_colors
	public
	setuptools
packages = 
	mac_logs
