# https://pypi.org/project/setupcfg-generator/
[metadata]
name = mac-logs
version = 2019.3.22
url = https://github.com/looking-for-a-job/mac-logs.py
classifiers = file: classifiers.txt
description = file: description.txt
long_description = file: README.md
long_description_content_type = text/markdown
keywords = logs

[options]
install_requires = 
	find
	mac_colors
	public
	setuptools
packages = 
	mac_logs
